--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,15 @@
 
     <groupId>com.gescof</groupId>
     <artifactId>spring-boot-3-tutorial</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>spring-boot-3-tutorial</name>
     <description>spring-boot-3-tutorial</description>
 
     <scm>
         <connection>scm:git:https://github.com/Gescof/spring-boot-3-tutorial.git</connection>
         <url>https://github.com/Gescof/spring-boot-3-tutorial.git</url>
-    </scm>
+      <tag>spring-boot-3-tutorial-1.0.0</tag>
+  </scm>
 
     <properties>
         <java.version>17</java.version>
